--- a/bshop-item.html
+++ b/bshop-item.html
@@ -8,7 +8,7 @@
 	<body>
 		<header>
 			<div class="container">
-				<img class="logo" href="http://bar_shop-logo_111x24">
+				<img class="logo" src="http://bar_shop-logo_111x24" alt="">
 				<nav class="main-menu">
 					<ul>
 						<li>
@@ -53,7 +53,7 @@
 			</nav>
 			<div class="gallery">
 				<figure class="gallery-content">
-					<img src="img/baxter-photo-3" width="460" height="498">
+					<img src="img/baxter-photo-3" width="460" height="498" alt="">
 				</figure>
 				<button class="btn gallery-1" type="button"></button>
 				<button class="btn gallery-2" type="button"></button>
@@ -76,7 +76,6 @@
 					</ul>
 				</div>
 			</section>
-			</div>
 		</main>
 		<footer>
 			<div class="container">
@@ -85,7 +84,7 @@
 					Адрес: г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
 					Как нас найти?<br>
 					Телефон: +7 (495) 666-02-66</p>
-				<div>
+				</div>
 				<div class="footer-social">
 					<b>Давайте дружить!</b>
 					<a class="social-vk" href="http://vk.com/barber-shop"></a>
