--- a/bshop-shop.html
+++ b/bshop-shop.html
@@ -8,7 +8,7 @@
 	<body>
 		<header>
 			<div class="container">
-				<img class="logo" href="http://bar_shop-logo_111x24">
+				<img class="logo" src="http://bar_shop-logo_111x24" alt="">
 				<nav class="main-menu">
 					<ul>
 						<li>
@@ -104,38 +104,38 @@
 			</form>
 			<div class="items">
 				<article class="item-1">
-					<img src="http://placehold.it/220x165">
-					<h3>Набор для путешествий "Baxter of California"</span>
+					<img src="http://placehold.it/220x165" alt="">
+					<h3>Набор для путешествий "Baxter of California"</h3>
 					<b>2 900 руб.</b>
 					<a class="btn" href="">Купить</a>
 				</article>
 				<article class="item-2">
-					<img src="http://placehold.it/220x165">
-					<h3>Увлажнаяющий кондиционер "Baxter of California"</span>
+					<img src="http://placehold.it/220x165" alt="">
+					<h3>Увлажнаяющий кондиционер "Baxter of California"</h3>
 					<b>750 руб.</b>
 					<a class="btn" href="">Купить</a>
 				</article>
 				<article class="item-3">
-					<img src="http://placehold.it/220x165">
-					<h3>Гель для волос "Suavecito"</span>
+					<img src="http://placehold.it/220x165" alt="">
+					<h3>Гель для волос "Suavecito"</h3>
 					<b>290 руб.</b>
 					<a class="btn" href="">Купить</a>
 				</article>
 				<article class="item-4">
-					<img src="http://placehold.it/220x165">
-					<h3>Глина для укладки волос "American crew"</span>
+					<img src="http://placehold.it/220x165" alt="">
+					<h3>Глина для укладки волос "American crew"</h3>
 					<b>500 руб.</b>
 					<a class="btn" href="">Купить</a>
 				</article>
 				<article class="item-5">
-					<img src="http://placehold.it/220x165">
-					<h3>Гель для волос "American crew"</span>
+					<img src="http://placehold.it/220x165" alt="">
+					<h3>Гель для волос "American crew"</h3>
 					<b>300 руб.</b>
 					<a class="btn" href="">Купить</a>
 				</article>
 				<article class="item-6">
-					<img src="http://placehold.it/220x165">
-					<h3>Набор для бритья "Baxter of California"</span>
+					<img src="http://placehold.it/220x165" alt="">
+					<h3>Набор для бритья "Baxter of California"</h3>
 					<b>3 900 руб.</b>
 					<a class="btn" href="">Купить</a>
 				</article>
@@ -154,7 +154,7 @@
 					Адрес: г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
 					Как нас найти?<br>
 					Телефон: +7 (495) 666-02-66</p>
-				<div>
+				</div>
 				<div class="footer-social">
 					<b>Давайте дружить!</b>
 					<a class="social-vk" href="http://vk.com/barber-shop"></a>
