--- a/bshop-item.html
+++ b/bshop-item.html
@@ -2,13 +2,15 @@
 <html lang="ru">
 	<head>
 		<meta charset="utf-8">
-		<title>Барбершоп - Магазин</title>
-		<link href="#" rel="stylesheet">
+		<title>Барбершоп - Набор для путешествий "Baxter of California"</title>
+		<link href="css/style.css" rel="stylesheet">
 	</head>
 	<body>
 		<header>
 			<div class="container">
-				<img class="logo" src="http://bar_shop-logo_111x24" alt="">
+				<a href="index.html">
+					<img src="img/header-logo_111x24.png" alt="Barbershop - Главная" width="111" height="24">
+				</a>
 				<nav class="main-menu">
 					<ul>
 						<li>
@@ -53,11 +55,17 @@
 			</nav>
 			<div class="gallery">
 				<figure class="gallery-content">
-					<img src="img/baxter-photo-3" width="460" height="498" alt="">
+					<img src="img/item-1_photo-3_460x498.jpg" width="460" height="498" alt="">
 				</figure>
-				<button class="btn gallery-1" type="button"></button>
-				<button class="btn gallery-2" type="button"></button>
-				<button class="btn gallery-3" type="button"></button>
+				<button class="btn gallery-1" type="button">
+					<img src="img/item-1_photo-1_mini_140x149.jpg" width="140" height="149">
+				</button>
+				<button class="btn gallery-2" type="button">
+					<img src="img/item-1_photo-2_mini_140x149.jpg" width="140" height="149">
+				</button>
+				<button class="btn gallery-3" type="button">
+					<img src="img/item-1_photo-3_mini_140x149.jpg" width="140" height="149">
+				</button>
 			</div>
 			<section class="item-info">
 				<p class="stock">Есть в наличиии</p>
@@ -87,9 +95,9 @@
 				</div>
 				<div class="footer-social">
 					<b>Давайте дружить!</b>
-					<a class="social-vk" href="http://vk.com/barber-shop"></a>
-					<a class="social-fb" href="http://facebook.com/barber-shop"></a>
-					<a class="social-instgr" href="http://instagram.com/barber-shop"></a>
+					<a class="social social-vk" href="http://vk.com/barber-shop"></a>
+					<a class="social social-fb" href="http://facebook.com/barber-shop"></a>
+					<a class="social social-inst" href="http://instagram.com/barber-shop"></a>
 				</div>
 				<div class="footer-developer">
 					<p>Разработано:</p>
