--- a/bshop-shop.html
+++ b/bshop-shop.html
@@ -3,12 +3,14 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Барбершоп - Магазин</title>
-		<link href="#" rel="stylesheet">
+		<link href="css/style.css" rel="stylesheet">
 	</head>
 	<body>
 		<header>
 			<div class="container">
-				<img class="logo" src="http://bar_shop-logo_111x24" alt="">
+				<a href="index.html">
+					<img src="img/header-logo_111x24.png" alt="Barbershop - Главная" width="111" height="24" alt="Главная">
+				</a>
 				<nav class="main-menu">
 					<ul>
 						<li>
@@ -54,46 +56,46 @@
 			<form>
 				<h2>Производители:</h2>
 				<div class="check-list">
-					<div class="brand brand-1">
+					<div class="brand checked">
 						<input type="checkbox" id="baxter" checked>
 						<label for="baxter">Baxter of California</label>
 					</div>
-					<div class="brand brand-2">
+					<div class="brand">
 						<input type="checkbox" id="natty">
 						<label for="natty">Mr. Natty</label>
 					</div>
-					<div class="brand brand-3">
+					<div class="brand checked">
 						<input type="checkbox" id="suavecito" checked>
 						<label for="suavecito">Suavecito</label>
 					</div>
-					<div class="brand brand-4">
+					<div class="brand">
 						<input type="checkbox" id="malin+goetz">
 						<label for="malin+goetz">Malin+Goetz</label>
 					</div>
-					<div class="brand brand-5">
+					<div class="brand">
 						<input type="checkbox" id="murray">
 						<label for="murray">Murray's</label>
 					</div>
-					<div class="brand brand-6">
+					<div class="brand checked">
 						<input type="checkbox" id="am-crew">
 						<label for="am-crew">American crew</label>
 					</div>
 				</div>
 				<h2>Группы товаров:</h2>
 				<div class="radio-list">
-					<div class="group group-1">
+					<div class="group">
 						<label>
 							<input type="radio" value="shaving" name="item-group">
 							Бритвенные принадлежности
 						</label>
 					</div>
-					<div class="group group-2">
+					<div class="group checked">
 						<label>
 							<input type="radio" value="care" name="item-group" checked>
 							Средства для ухода
 						</label>
 					</div>
-					<div class="group group-3">
+					<div class="group">
 						<label>
 							<input type="radio" value="accesories" name="item-group">
 							Аксессуары
@@ -104,37 +106,37 @@
 			</form>
 			<div class="items">
 				<article class="item-1">
-					<img src="http://placehold.it/220x165" alt="">
+					<img src="img/cat_item-1_220x165.jpg" alt="Набор для путешествий Baxter of California">
 					<h3>Набор для путешествий "Baxter of California"</h3>
 					<b>2 900 руб.</b>
 					<a class="btn" href="">Купить</a>
 				</article>
 				<article class="item-2">
-					<img src="http://placehold.it/220x165" alt="">
+					<img src="img/cat_item-2_220x165.jpg" alt="Увлажнаяющий кондиционер Baxter of California">
 					<h3>Увлажнаяющий кондиционер "Baxter of California"</h3>
 					<b>750 руб.</b>
 					<a class="btn" href="">Купить</a>
 				</article>
 				<article class="item-3">
-					<img src="http://placehold.it/220x165" alt="">
+					<img src="img/cat_item-3_220x165.jpg" alt="Гель для волос Suavecito">
 					<h3>Гель для волос "Suavecito"</h3>
 					<b>290 руб.</b>
 					<a class="btn" href="">Купить</a>
 				</article>
 				<article class="item-4">
-					<img src="http://placehold.it/220x165" alt="">
+					<img src="img/cat_item-4_220x165.jpg" alt="Глина для укладки волос American crew">
 					<h3>Глина для укладки волос "American crew"</h3>
 					<b>500 руб.</b>
 					<a class="btn" href="">Купить</a>
 				</article>
 				<article class="item-5">
-					<img src="http://placehold.it/220x165" alt="">
+					<img src="img/cat_item-5_220x165.jpg" alt="Гель для волос American crew">
 					<h3>Гель для волос "American crew"</h3>
 					<b>300 руб.</b>
 					<a class="btn" href="">Купить</a>
 				</article>
 				<article class="item-6">
-					<img src="http://placehold.it/220x165" alt="">
+					<img src="img/cat_item-6_220x165.jpg" alt="Набор для бритья Baxter of California">
 					<h3>Набор для бритья "Baxter of California"</h3>
 					<b>3 900 руб.</b>
 					<a class="btn" href="">Купить</a>
@@ -157,9 +159,9 @@
 				</div>
 				<div class="footer-social">
 					<b>Давайте дружить!</b>
-					<a class="social-vk" href="http://vk.com/barber-shop"></a>
-					<a class="social-fb" href="http://facebook.com/barber-shop"></a>
-					<a class="social-instgr" href="http://instagram.com/barber-shop"></a>
+					<a class="social social-vk" href="http://vk.com/barber-shop"></a>
+					<a class="social social-fb" href="http://facebook.com/barber-shop"></a>
+					<a class="social social-inst" href="http://instagram.com/barber-shop"></a>
 				</div>
 				<div class="footer-developer">
 					<p>Разработано:</p>
